--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -10,12 +10,27 @@
     <title>Meditation</title>
 </head>
 <body class="Meditation-color">
-    <header class="Meditation-header">
-        <a href="../Mediation/index.html"><img src="../Mediation/img/Mediation-header__logo.svg" alt=""></a>
-        <div class="Meditation-header__menu">
-            
-        </div>
-    </header>
+    	<header class="Meditation-header" id="up">
+		    <div class="Meditation-header__container">
+                <a href="../Mediation/index.html"><img src="../Mediation/img/Mediation-header__logo.svg" alt=""></a>
+                <div class="Meditation-header__menu menu">
+                    <nav class="Meditation-header__menu-body">
+                        <ul class="Meditation-header__list">
+                            <li><a href="#" class="menu-link-Meditation">Home</a></li>
+                            <li><a href="#" class="menu-link-Meditation">Explore</a></li>
+                            <li><a href="#" class="menu-link-Meditation">Classes</a></li>
+                            <li><a href="#" class="menu-link-Meditation">About Us</a></li>
+                            <li><a href="#" class="menu-link-Meditation">Privacy</a></li>
+                            <li><a href="#" class="menu-link-Meditation">Services</a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+            <div class="Meditation-header__burgerMenu">
+				<span></span>
+			</div>
+		</div>
+	</header>
 
     <section class="Meditation-One">
         <h1 class="Meditation-One__h1">
@@ -295,5 +310,15 @@
             <a href="https://twitter.com/"><img src="../Mediation/img/logo-3.svg" alt=""></a>
         </div>
     </footer>
+
+    <a href="#up" class="pageUp">
+        <img src="../Mediation/img/up.svg" alt="" class="pageUp">
+    </a>
+    
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+    <script src="../../js/up.js"></script>
+    <script src="../Mediation/js/burgerMenu.js"></script>
 </body>
 </html>
