--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -268,7 +268,7 @@
             </div>
         </div>
 
-        <div class="ZEN-section__common">
+        <div class="ZEN-section__common ZEN-section__common-reverse">
             <div class="ZEN-section__img">
                 <img src="../ZEN/img/section8.png" alt="">
             </div>
