--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -41,7 +41,7 @@
         <div class="Meditation-One__under-text">
             “It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout point of using Lorem Ipsum is that it has a more-or-less.”
         </div>
-        <a href="#" class="Get-Start">Get Start</a>
+        <a href="#" class="Meditation-One__Get-Start">Get Start</a>
         
         <div class="Meditation-One__img">
             <img src="../Mediation/img/Meditation-One-img.png" alt="">
@@ -93,9 +93,9 @@
 
         <div class="Meditation-wrapper">
             <div class="Meditation-item">
-                <img src="../Mediation/img/frog.svg" alt="">
+                <img src="../Mediation/img/frog.png" alt="">
             </div>
-            <div class="Meditation-item__wrapper">
+            <div class="Meditation-item__wrapper" id="Meditation-items">
                 <div class="Meditation-item">
                     <div class="Meditation-item__article Meditation-item__article-active">
                         <div class="Meditation-item__article-title">
@@ -365,6 +365,7 @@
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     
+    <script src="../Mediation/js/Meditation-item.js"></script>
     <script src="../Mediation/js/audio.js"></script>
     <script src="../../js/up.js"></script>
     <script src="../Mediation/js/burgerMenu.js"></script>
