--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -104,6 +104,9 @@
                         <div class="Meditation-item__article-text">
                             There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form by injected.
                         </div>
+                        <div class="Meditation-item__article-active-arrow">
+                            <a href="#"><img src="../Mediation/img/Meditation-item-arrow.svg" alt=""></a>
+                        </div>
                     </div>
                 </div>
 
