--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -104,8 +104,8 @@
                         <div class="Meditation-item__article-text">
                             There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form by injected.
                         </div>
-                        <div class="Meditation-item__article-active-arrow">
-                            <a href="#"><img src="../Mediation/img/Meditation-item-arrow.svg" alt=""></a>
+                        <div class="Meditation-item__article-arrow">
+                            <a href="#"></a>
                         </div>
                     </div>
                 </div>
@@ -118,6 +118,9 @@
                         <div class="Meditation-item__article-text">
                             Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally can procure him some great pleasure.
                         </div>
+                        <div class="Meditation-item__article-arrow">
+                            <a href="#"></a>
+                        </div>
                     </div>
                 </div>
 
@@ -128,6 +131,9 @@
                         </div>
                         <div class="Meditation-item__article-text">
                             It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
+                        </div>
+                        <div class="Meditation-item__article-arrow">
+                            <a href="#"></a>
                         </div>
                     </div>
                 </div>
