--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -181,7 +181,7 @@
                     
                     <div class="Meditation-music__item-player">
                         <audio id="audio-2">
-                            <source src="../Mediation/audio/San_Andreas_Theme_Song.mp3" type="audio/mpeg">
+                            <source src="../Mediation/audio/San_Andreas_Hey_Good_Lookin.mp3" type="audio/mpeg">
                         </audio>
 
                         <button class="player-btn" id="playStopBTN-2" onclick="playStop2()">&#9658;</button>
@@ -200,7 +200,7 @@
                     
                     <div class="Meditation-music__item-player">
                         <audio id="audio-3">
-                            <source src="../Mediation/audio/San_Andreas_Theme_Song.mp3" type="audio/mpeg">
+                            <source src="../Mediation/audio/San_Andreas_Conway_Twitty_&_Loretta Lynn.mp3" type="audio/mpeg">
                         </audio>
 
                         <button class="player-btn" id="playStopBTN-3" onclick="playStop3()">&#9658;</button>
