--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -535,6 +535,15 @@
 
     </section>
 
+    <div class="backgrounds-img">
+        <img src="../SOS/img/background/bg-image-1-min.jpg" alt="">
+        <img src="../SOS/img/background/bg-image-2-min.jpg" alt="">
+        <img src="../SOS/img/background/bg-image-3-min.jpg" alt="">
+        <img src="../SOS/img/background/bg-image-4-min.jpg" alt="">
+        <img src="../SOS/img/background/bg-image-5-min.jpg" alt="">
+        <img src="../SOS/img/background/bg-image-6-min.jpg" alt="">
+    </div>
+
     <a href="#up" class="pageUp">
         <img src="../SOS/img/up.svg" alt="" class="pageUp">
     </a>
@@ -545,6 +554,7 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
+    <script src="../SOS/js/backgroundScroll.js"></script>
     <script src="js/button-subscribe.js"></script>
     <script src="js/SOS-s3menu.js"></script>
     <script src="js/burgerMenu.js"></script>
@@ -553,7 +563,7 @@
     <script src="../SOS/js/scrollUp.js"></script>
     <script src="../SOS/js/scroll-Header__SOS.js"></script>
     <script src="../SOS/js/scroll-footer__SOS.js"></script>
-    <script src="../SOS/js/backgroundScroll.js"></script>
+    
     <!-- <script src="../SOS/js/switch-img.js"></script> -->
 
 
