--- a/Andrusha/index.html
+++ b/Andrusha/index.html
@@ -18,7 +18,7 @@
         <section class="person">
             
             <div class="person-item__img">
-                <img src="../Andrusha-main/img/humster.jpg" alt="">
+                <img src="../Andrusha/img/humster.jpg" alt="">
             </div>
             <div class="person-item">
                 <div class="person-item__text">
@@ -301,7 +301,7 @@
 
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="../Andrusha-main/js/catalog.js"></script>
+    <script src="../Andrusha/js/catalog.js"></script>
 
 </body>
 </html>
