--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -470,7 +470,7 @@
                             </div>
                         </div>
 
-                        <button class="ButtonSubscribe"></button>
+                        <button class="ButtonSubscribe">Subscribe now</button>
                     </div>
                 </div>
             </div>
@@ -551,11 +551,7 @@
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-
     <script src="../SOS/js/backgroundScroll.js"></script>
-    <script src="js/button-subscribe.js"></script>
     <script src="js/SOS-s3menu.js"></script>
     <script src="js/burgerMenu.js"></script>
     <!-- <script src="../../js/up.js"></script> -->
