--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -42,9 +42,7 @@
 			</div>
 
             <div class="ZEN-header__button">
-                <div class="ZEN-header__button-text">
-                    Get app
-                </div>
+                <a href="#">Get app</a>
             </div>
 			<div class="ZEN-header__burgerMenu">
 				<span></span>
