--- a/app/Calc-on-iPhone-JS/index.html
+++ b/app/Calc-on-iPhone-JS/index.html
@@ -26,7 +26,7 @@
                 <span class="hour"></span>:<span class="minute"></span>
             </div>
             <div class="battery">
-                <div class="battary-text">
+                <div class="battery-text">
                     100%
                 </div>
                 <div class="battery-logo">
