--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -78,7 +78,7 @@
                 <div class="sub-title">
                     experrience new social battle royale game
                 </div>
-                <div class="button-yellow">
+                <a href="https://store.steampowered.com/" class="button-yellow">
                     <div class="button-yellow__left">
                         Buy now on Steam
                     </div>
@@ -88,7 +88,7 @@
                     <div class="button-yellow__right">
                         $14.99
                     </div>
-                </div>
+                </a>
             </div>
 
 
