--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -8,17 +8,16 @@
     <link rel="icon" href="img/logo.png">
     <link rel="stylesheet" href="../SOS/css/all.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <!--     <script src="https://kit.fontawesome.com/3cced8357a.js" crossorigin="anonymous"></script> -->
     <title>SOS</title>
 </head>
 
-<body>
+<body id="up">
     <section class="backgrounds" id="backgrounds">
 
     </section>
     <section class="SectionOne" id="mainIn">
         <div class="container1">
-            <header class="headerSOS" id="up">
+            <header class="headerSOS" >
 		<div class="header-container-SOS">
 			<div class="headerSOS-LEFT-img">
                 <div class="headerSOS-LEFT-img-logo">
@@ -320,49 +319,46 @@
                     to say.
                 </div>
 
-                <div class="Read-more__inner">
-                    <button class="Read-more">
-                        <div class="Read-more__text">
-                            Read more testimonials
+                <a href="#" class="Read-more">
+                    Read more testimonials
+                </a>
+
+            </div>
+
+
+
+
+            <div class="SOS-s5-right">
+                <div class="evanSOS">
+                    <div class="evan reviewsSOS">
+                        <div class="reviewsSOS-name">
+                            Evan Lahti
                         </div>
-                    </button>
-                </div>
-           </div>
 
+                        <div class="reviewsSOS-subname">
+                            PC Gamer
+                        </div>
 
+                        <div class="reviewsSOS-img">
+                            <img src="../SOS/img/evan.jpg" alt="">
+                        </div>
 
+                        <div class="reviewsSOS-yellowCircle">
 
-                   <div class="SOS-s5-right">
-            <div class="evanSOS">
-                <div class="evan reviewsSOS">
-                    <div class="reviewsSOS-name">
-                        Evan Lahti
+                        </div>
+
+                        <div class="reviewsSOS-social fab fa-twitter">
+
+                        </div>
+
+                        <div class="reviewsSOS-text">
+                            “One of my gaming highlights of the year.”
+                        </div>
+
+                        <div class="reviewsSOS-date">
+                            October 18, 2018
+                        </div>
                     </div>
-
-                    <div class="reviewsSOS-subname">
-                        PC Gamer
-                    </div>
-
-                    <div class="reviewsSOS-img">
-                        <img src="../SOS/img/evan.jpg" alt="">
-                    </div>
-
-                    <div class="reviewsSOS-yellowCircle">
-
-                    </div>
-
-                    <div class="reviewsSOS-social fab fa-twitter">
-
-                    </div>
-
-                    <div class="reviewsSOS-text">
-                        “One of my gaming highlights of the year.”
-                    </div>
-
-                    <div class="reviewsSOS-date">
-                        October 18, 2018
-                    </div>
-                </div>
             </div>
 
             <div class="LadaSOS">
@@ -470,7 +466,7 @@
                             </div>
                         </div>
 
-                        <button class="ButtonSubscribe">Subscribe now</button>
+                        <a href="#" class="ButtonSubscribe">Subscribe now</a>
                     </div>
                 </div>
             </div>
