--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -317,6 +317,7 @@
                 <br>
                 These cases are perfectly simple and easy to distinguish. In a free hour when our power of choice is untrammelled.
             </div>
+            <a href="#" class="gym-item__button">Learn More</a>
         </div>
 
     </div>
@@ -333,6 +334,7 @@
                 <br>
                 The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
             </div>
+            <a href="#" class="gym-item__button">Learn More</a>
         </div>
 
         <div class="gym-img">
