--- a/Andrusha/index.html
+++ b/Andrusha/index.html
@@ -268,7 +268,7 @@
                         <div class="catalog-item__inner">
                             <div class="catalog-item__content catalog-item__content_active">
                                 <div class="catalog-item__img-wrapper">
-                                    <img src="../img/GamesOne/Calc-on-iPhone-JS.svg" class="catalog-item__img">
+                                    <img src="img/Calc-on-iPhone-JS.svg" class="catalog-item__img">
                                 </div>
                                 
                                 <div class="catalog-item__subtitle">Калькулятор</div>
