--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -378,7 +378,7 @@
     
     <script src="../Mediation/js/Meditation-item.js"></script>
     <script src="../Mediation/js/audio.js"></script>
-    <script src="../../js/up.js"></script>
+    <script src="../../Andrusha/js/up.js"></script>
     <script src="../Mediation/js/burgerMenu.js"></script>
 </body>
 </html>
