--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -418,7 +418,7 @@
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
-    <script src="../../js/up.js"></script>
+    <script src="../../Andrusha/js/up.js"></script>
     <script src="../ZEN/js/script.js"></script>
     <script src="../ZEN/js/burgerMenu.js"></script>
 
