--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="../Andrusha/js/catalog.js"></script>
+    <script src="Andrusha/js/catalog.js"></script>
 
 </body>
 </html>
