--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -61,14 +61,7 @@
                     In every beginning, there is chaos.
                 </div>
                 <div class="ZEN-section__common-text-h1">
-                    <div class="ZEN-section__common-text-h1-1">
-                        Peaceful shopping.
-                    </div>
-
-                    <div class="ZEN-section__common-text-h1-2">
-                        Mindful money.
-                    </div>
-
+                    Peaceful shopping. Mindful money.
                 </div>
 
                 <div class="ZEN-section__common-text-textUnder">
@@ -287,12 +280,8 @@
                     </p>
                 </div>
                 <div class="ZEN-section8-button">
-                    <div class="ZEN-section8-AppStore">
                         <a href="https://www.apple.com/app-store/" target="_blank"><img src="../ZEN/img/AppStore(figma).png" alt=""></a>
-                    </div>
-                    <div class="ZEN-section8-AppStore">
                         <a href="https://play.google.com/store" target="_blank"><img src="../ZEN/img/GoolgePlay(figma).png" alt=""></a>
-                    </div>
                 </div>
             </div>
         </div>
