--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -60,7 +60,7 @@
                     <i class="far fa-play-circle"></i>
                     In every beginning, there is chaos.
                 </div>
-                <div class="ZEN-section__common-text-h1">
+                <div class="ZEN-section__common-text-main">
                     Peaceful shopping. Mindful money.
                 </div>
 
@@ -183,8 +183,12 @@
 
         <div class="ZEN-section__common">
             <div class="ZEN-section__common-text ZENs4h">
-                <div class="ZEN-section__common-text-h1">
+                <div class="ZEN-section__common-text-h1 ZEN-section__common-text-h1-long">
                     ZEN shopping Mastercard
+                    <sup>
+                        <i class="far fa-registered"></i>
+                    </sup>
+                    
                 </div>
                 <div class="ZEN-section__common-text-text">
                     You shouldn’t be bound to use one card at a time, especially when it has so many benefits! With ZEN,
