--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -14,6 +14,8 @@
 <body>
 
 
+
+
 	<header class="ZEN-header" id="up">
 		<div class="ZEN-header__container">
 			<div class="ZEN-header__logo">
@@ -51,7 +53,7 @@
 	</header>
 
     
-     
+    <div class="header-line"></div>
 
     <div class="ZEN-section">
         <div class="ZEN-section__common">
@@ -292,9 +294,7 @@
 
         <footer>
 
-            <div class="footer-line">
-
-            </div>
+            <div class="footer-line"></div>
 
 
             <div class="footerZEN-menu">
