--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -231,14 +231,10 @@
     <!-- вёрстка четвёртого блока -->
     <section class="SectionFour" id="requirementsIn">
         <div class="s4-h1up">
-            <div class="s4-h1up-text">
-                Can My Computer Run this game?
-            </div>
+            Can My Computer Run this game?
         </div>
         <div class="s4-h1main">
-            <div class="s4-h1main-text">
-                system requirements
-            </div>
+            system requirements
         </div>
 
         <div class="TableSOS-wrapper">
@@ -362,7 +358,7 @@
             </div>
 
             <div class="LadaSOS">
-                <div class="lada reviewsSOS">
+                <div class="reviewsSOS lada ">
                     <div class="reviewsSOS-name">
                         Jada Griffin
                     </div>
