--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -183,13 +183,11 @@
     <section class="SectionThree" id="featuresIn">
         <div class="SOS-S3-container">
             <div class="SOS-S3-wrapper">
-                <div class="S3-h1up-text">
+                <div class="S3-h1up">
                     What’s so special?
                 </div>
                 <div class="S3-h1main">
-                    <div class="S3-h1main-text">
-                        features
-                    </div>
+                    features
                 </div>
                 <div class="SOS-s3-menu__inner">
                     <div id="SOS-s3menu">
