--- a/app/Calc-on-iPhone-JS/index.html
+++ b/app/Calc-on-iPhone-JS/index.html
@@ -38,25 +38,36 @@
         
         <div class="value">0</div>
         <div class="CalcButtons-container">
-            <div class="CalcButton function ac">AC</div>
-            <div class="CalcButton function pm">±</div>
-            <div class="CalcButton function percent">%</div>
-            <div class="CalcButton operator division">÷</div>
-            <div class="CalcButton number-7">7</div>
-            <div class="CalcButton number-8">8</div>
-            <div class="CalcButton number-9">9</div>
-            <div class="CalcButton operator multiplication">×</div>
-            <div class="CalcButton number-4">4</div>
-            <div class="CalcButton number-5">5</div>
-            <div class="CalcButton number-6">6</div>
-            <div class="CalcButton operator subtraction">−</div>
-            <div class="CalcButton number-1">1</div>
-            <div class="CalcButton number-2">2</div>
-            <div class="CalcButton number-3">3</div>
-            <div class="CalcButton operator addition">+</div>
-            <div class="CalcButton number-0">0</div>
-            <div class="CalcButton decimal">,</div>
-            <div class="CalcButton operator equal">=</div>
+            <span>
+                <div class="CalcButton function ac">AC</div>
+                <div class="CalcButton function pm">±</div>
+                <div class="CalcButton function percent">%</div>
+                <div class="CalcButton operator division">÷</div>
+            </span>
+            <span>
+                <div class="CalcButton number-7">7</div>
+                <div class="CalcButton number-8">8</div>
+                <div class="CalcButton number-9">9</div>
+                <div class="CalcButton operator multiplication">×</div>
+            </span>
+            <span>
+                <div class="CalcButton number-4">4</div>
+                <div class="CalcButton number-5">5</div>
+                <div class="CalcButton number-6">6</div>
+                <div class="CalcButton operator subtraction">−</div>
+            </span>
+            <span>
+                <div class="CalcButton number-1">1</div>
+                <div class="CalcButton number-2">2</div>
+                <div class="CalcButton number-3">3</div>
+                <div class="CalcButton operator addition">+</div>
+            </span>
+            <span>
+                <div class="CalcButton number-0">0</div>
+                <div class="CalcButton decimal">,</div>
+                <div class="CalcButton operator equal">=</div>
+            </span>
+            
         </div>
     </div>
 
