--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         </div>
                         
                         <div class="button_main">
-                            <a href="app/Calc-on-iPhone-JS/index.html" data-fancybox data-options='{"type" : "iframe", "iframe" : {"preload" : false, "css" : {"width" : "470px", "height" : "700px"}}}'>Запустить</a>
+                            <a href="app/Calc-on-iPhone-JS/index.html" data-fancybox data-options='{"type" : "iframe", "iframe" : {"preload" : false, "css" : {"width" : "470px", "height" : "700px", "background" : "transparent"}}}'>Запустить</a>
                         </div>
                     </div>
                 </div>
