--- a/app/Calc-on-iPhone-JS/index.html
+++ b/app/Calc-on-iPhone-JS/index.html
@@ -40,7 +40,7 @@
         <div class="CalcButtons-container">
             <span>
                 <div class="CalcButton function ac">AC</div>
-                <div class="CalcButton function pm">±</div>
+                <div class="CalcButton function pm">&plusmn</div>
                 <div class="CalcButton function percent">%</div>
                 <div class="CalcButton operator division">÷</div>
             </span>
