--- a/app/Calc-on-iPhone-JS/index.html
+++ b/app/Calc-on-iPhone-JS/index.html
@@ -42,7 +42,7 @@
                 <div class="CalcButton function ac">AC</div>
                 <div class="CalcButton function pm">&plusmn</div>
                 <div class="CalcButton function percent">%</div>
-                <div class="CalcButton operator division">÷</div>
+                <div class="CalcButton operator division">&#247</div>
             </span>
             <span>
                 <div class="CalcButton number-7">7</div>
