--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -157,28 +157,44 @@
         <div class="ZEN-company">
             <div class="ZEN-company__all">
                 <div class="ZEN-company__png">
-                    <img id = Booking src="../ZEN/img/company/Booking.png" alt="" onmouseover="onMouseCompany1()"  onmouseout="outMouseCompany1()">
+                    <a href="#">
+                        <img id = Booking src="../ZEN/img/company/Booking.png" alt="" onmouseover="onMouseCompany1()"  onmouseout="outMouseCompany1()">
+                    </a>
                 </div>
                 <div class="ZEN-company__png">
-                    <img id = AliExpress src="../ZEN/img/company/AliExpress.png" alt="" onmouseover="onMouseCompany2()"  onmouseout="outMouseCompany2()">
+                    <a href="#">
+                        <img id = AliExpress src="../ZEN/img/company/AliExpress.png" alt="" onmouseover="onMouseCompany2()"  onmouseout="outMouseCompany2()">
+                    </a>
                 </div>
                 <div class="ZEN-company__png">
-                    <img id = Allegro src="../ZEN/img/company/Allegro.png" alt="" alt="" onmouseover="onMouseCompany3()"  onmouseout="outMouseCompany3()">
+                    <a href="#">
+                        <img id = Allegro src="../ZEN/img/company/Allegro.png" alt="" alt="" onmouseover="onMouseCompany3()"  onmouseout="outMouseCompany3()">
+                    </a>
                 </div>
                 <div class="ZEN-company__png">
-                    <img id = Zalando-lounge src="../ZEN/img/company/Zalando-lounge.png" alt="" onmouseover="onMouseCompany4()"  onmouseout="outMouseCompany4()">
+                    <a href="#">
+                        <img id = Zalando-lounge src="../ZEN/img/company/Zalando-lounge.png" alt="" onmouseover="onMouseCompany4()"  onmouseout="outMouseCompany4()">
+                    </a>
                 </div>
                 <div class="ZEN-company__png">
-                    <img id = Lidl src="../ZEN/img/company/Lidl.png" alt="" onmouseover="onMouseCompany5()"  onmouseout="outMouseCompany5()">
+                    <a href="#">
+                        <img id = Lidl src="../ZEN/img/company/Lidl.png" alt="" onmouseover="onMouseCompany5()"  onmouseout="outMouseCompany5()">
+                    </a>
                 </div>
                 <div class="ZEN-company__png">
-                    <img id = MadiaMarkt src="../ZEN/img/company/MadiaMarkt.png" alt="" onmouseover="onMouseCompany6()"  onmouseout="outMouseCompany6()">
+                    <a href="#">
+                        <img id = MadiaMarkt src="../ZEN/img/company/MadiaMarkt.png" alt="" onmouseover="onMouseCompany6()"  onmouseout="outMouseCompany6()">
+                    </a>
                 </div>
                 <div class="ZEN-company__png">
-                    <img id = RTV-evro-AGD src="../ZEN/img/company/RTV-evro-AGD.png" alt="" onmouseover="onMouseCompany7()"  onmouseout="outMouseCompany7()">
+                    <a href="#">
+                        <img id = RTV-evro-AGD src="../ZEN/img/company/RTV-evro-AGD.png" alt="" onmouseover="onMouseCompany7()"  onmouseout="outMouseCompany7()">
+                    </a>
                 </div>
                 <div class="ZEN-company__png">
-                    <img id = Groupon src="../ZEN/img/company/Groupon.png" alt="" onmouseover="onMouseCompany8()"  onmouseout="outMouseCompany8()">
+                    <a href="#">
+                        <img id = Groupon src="../ZEN/img/company/Groupon.png" alt="" onmouseover="onMouseCompany8()"  onmouseout="outMouseCompany8()">
+                    </a>
                 </div>
             </div>
         </div>
