--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -48,7 +48,7 @@
         </div>
     </section>
     <section class="Meditation-container">
-        <div class="Meditation-wrapper">
+        <div class="Meditation-papper-wrapper">
             <div class="paper paper-1">
                 <img src="../Mediation/img/paper-img-1.svg" alt="">
                 <div class="paper-title">
