--- a/Andrusha/index.html
+++ b/Andrusha/index.html
@@ -45,7 +45,9 @@
                             Диплом бакалавра - средний балл 4,02
                         </p>
                         <p>
-                            Диплом магистра - средний балл 4,91 (красный диплом)
+                            Диплом магистра - средний балл 4,91
+                            <br>
+                            (красный диплом)
                         </p>
                     </p>
                 </div>
