--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             Диплом бакалавра - средний балл 4,02
                         </p>
                         <p>
-                            Диплом магистра - средний балл 4,87
+                            Диплом магистра - средний балл 4,87 (красный диплом)
                         </p>
                     </p>
                 </div>
