--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -460,7 +460,7 @@
                             </div>
                         </div>
 
-                        <a href="#" class="ButtonSubscribe">Subscribe now</a>
+                        <button class="ButtonSubscribe"></button>
                     </div>
                 </div>
             </div>
@@ -540,6 +540,9 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+
     <script src="../SOS/js/backgroundScroll.js"></script>
     <script src="js/SOS-s3menu.js"></script>
     <script src="js/burgerMenu.js"></script>
@@ -548,6 +551,7 @@
     <script src="../SOS/js/scrollUp.js"></script>
     <script src="../SOS/js/scroll-Header__SOS.js"></script>
     <script src="../SOS/js/scroll-footer__SOS.js"></script>
+    <script src="../SOS/js/button-subscribe.js"></script>
     
     <!-- <script src="../SOS/js/switch-img.js"></script> -->
 
