--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -420,15 +420,14 @@
 
     </div>
 
-    <a href="#up" class="pageUp">
-        <img src="../ZEN/img/up.svg" alt="" class="pageUp">
-    </a>
-
-    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <div id="scrollTop-ZEN" class="ShowUp ShowUp-hidden">
+        <i class="fas fa-arrow-circle-up"></i>
+    </div>
 
     <script src="../../Andrusha/js/up.js"></script>
     <script src="../ZEN/js/script.js"></script>
     <script src="../ZEN/js/burgerMenu.js"></script>
+    <script src="../ZEN/js/up.js"></script>
 
 
 
