del jquery scrollUp SOS

--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -534,9 +534,13 @@
         <img src="../SOS/img/background/bg-image-6-min.jpg" alt="">
     </div>
 
-    <a href="#up" class="pageUp">
+<!--     <a href="#up" class="pageUp">
         <img src="../SOS/img/up.svg" alt="" class="pageUp">
-    </a>
+    </a> -->
+
+    <div id="scrollTopSOS" class="ShowUp ShowUp-hidden">
+        <i class="fas fa-arrow-circle-up"></i>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
@@ -544,11 +548,12 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
     <script src="../SOS/js/backgroundScroll.js"></script>
+    <script src="js/up.js"></script>
     <script src="js/SOS-s3menu.js"></script>
     <script src="js/burgerMenu.js"></script>
     <!-- <script src="../../js/up.js"></script> -->
     <script src="js/sliderSOS.js"></script>
-    <script src="../SOS/js/scrollUp.js"></script>
+    <!-- <script src="../SOS/js/scrollUp.js"></script> -->
     <script src="../SOS/js/scroll-Header__SOS.js"></script>
     <script src="../SOS/js/scroll-footer__SOS.js"></script>
     <script src="../SOS/js/button-subscribe.js"></script>
