--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                         jQuery
                     </p>
                     <p>
+                        React
+                    </p>
+                    <p>
                         Selenium
                     </p>
                     <p>
