--- a/main-site/public/index.html
+++ b/main-site/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/img/letter_a.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -16,28 +16,28 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+      Обратите внимание на использование% PUBLIC_URL% в тегах выше.
+      Он будет заменен URL-адресом папки `public` во время сборки.
+      Из HTML можно ссылаться только на файлы внутри папки `public`.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
+      В отличие от "/favicon.ico" или "favicon.ico", "% PUBLIC_URL% / favicon.ico" будет
+      правильно работать как с маршрутизацией на стороне клиента, так и с общедоступным URL-адресом без полномочий root.
+      Узнайте, как настроить общедоступный URL без полномочий root, запустив `npm run build`.
     -->
-    <title>React App</title>
+    <title>Андрюша</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+      Этот HTML-файл является шаблоном.
+      Если вы откроете его прямо в браузере, вы увидите пустую страницу.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+      Вы можете добавить в этот файл веб-шрифты, метатеги или аналитику.
+      На этапе сборки объединенные скрипты будут помещены в тег <body>.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+      Чтобы начать разработку, запустите `npm start` или` yarn start`.
+      Чтобы создать производственный пакет, используйте npm run build или yarn build.
     -->
   </body>
 </html>
